[package]
name = "Mapo"
version = "0.1.0"
authors = ["albysmith <48844001+albysmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.3"
postgres = "0.17.0"